# MyTemplate

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: InitMyCMake.cmake  Tools.cmake
config/: Config.cmake.in
include/MyTemplate/: Basic.h  Concept.h  EBCO.h  Func.h  Func.hpp  FuncTraits.h  Name.h  Name.hpp  Num.h  SI.h  SI.hpp  TSTR.h  TStr.h  TStr.hpp  TemplateList.h  TemplateList.hpp  Type.h  Type.hpp  TypeID .h  TypeID.h  TypeList.h  TypeList.hpp  Util.h  Util.hpp
include/MyTemplate/List/: List.h  TemplateList.h  TypeList.h
include/MyTemplate/Num/: Bool.h  Num.h
include/MyTemplate/StdName/: Name_deque.h  Name_deque.hpp  Name_forward_list.h  Name_forward_list.hpp  Name_list.h  Name_list.hpp  Name_map.h  Name_map.hpp  Name_memory.h  Name_memory.hpp  Name_queue.h  Name_queue.hpp  Name_set.h  Name_set.hpp  Name_span.h  Name_span.hpp  Name_stack.h  Name_stack.hpp  Name_string.h  Name_string.hpp  Name_string_view.h  Name_string_view.hpp  Name_unordered_map.h  Name_unordered_map.hpp  Name_unordered_set.h  Name_unordered_set.hpp  Name_vector.h  Name_vector.hpp
include/MyTemplate/TypeID/: TypeID .h
include/MyTemplate/details/: DecodeTStr.inl  Func.inl  Name.inl  SI.inl  TemplateList.inl  ToTTType.inl  TypeList.inl  Util.inl
include/Template/: List.h  Name.h  TypeList.h
src/EMPTY/: CMakeLists.txt  EMPTY.cpp
src/core/: CMakeLists.txt
src/head_files/: EMPTY.cpp
src/test/: CMakeLists.txt
src/test/00/: CMakeLists.txt  main.cpp
src/test/00_Name/: CMakeLists.txt  main.cpp
src/test/01_List/: CMakeLists.txt  main.cpp
src/test/01_Num/: CMakeLists.txt  main.cpp
src/test/01_Num/00_Basic/: main.cpp
src/test/01_Num/01_Sequence/: main.cpp
src/test/01_TStr/: main.cpp
src/test/02_0_TypeList/: CMakeLists.txt  main.cpp
src/test/02_1_TemplateList/: main.cpp
src/test/02_EBCO/: main.cpp
src/test/02_List/: main.cpp
src/test/02_List/01_TemplateList/: main.cpp
src/test/02_List/01_TypeList/: main.cpp
src/test/02_List/02_TemplateList/: main.cpp
src/test/02_List/03_Sort/: main.cpp
src/test/02_SI/: main.cpp
src/test/03_EBCOI/: main.cpp
src/test/03_SI/: main.cpp
src/test/03_SIT/: main.cpp
src/test/04_EBCO/: main.cpp
src/test/04_SIT/: main.cpp
src/test/05_SI_CRTP/: main.cpp
src/test/06_SI_CRTP_Auto/: main.cpp
src/test/06_TypeID/: main.cpp
src/test/07_Func/00_FuncTraits/: main.cpp
src/test/07_FuncTraits/: main.cpp
src/test/09_Concept/: main.cpp
src/test/10_Name/: main.cpp
src/test/11_NameTratis/: main.cpp
src/test/12_Type/: main.cpp
src/test/13_StdName/: main.cpp
(+6 files in other folders)
