CMAKE_MINIMUM_REQUIRED(VERSION 3.20 FATAL_ERROR)

PROJECT(MyTemplate VERSION 0.4.5 LANGUAGES CXX)
MESSAGE(STATUS "Project: ${PROJECT_NAME} ${PROJECT_VERSION}")

INCLUDE(FETCHCONTENT)

SET(MyCMake_VERSION 0.5.5)
MESSAGE(STATUS "Looking for: MyCMake ${MyCMake_VERSION}")
FIND_PACKAGE(MyCMake ${MyCMake_VERSION} QUIET)
IF (NOT MyCMake_FOUND)
    SET(ADDRESS "https://github.com/shimakaze09/MyCMake.git")
    MESSAGE(STATUS "MyCMake ${MyCMake_VERSION} not found\n")
    MESSAGE(STATUS "Fetching from ${ADDRESS} with tag ${MyCMake_VERSION}")
    FETCHCONTENT_DECLARE(
            MyCMake
            GIT_REPOSITORY ${ADDRESS}
            GIT_TAG ${MyCMake_VERSION}
    )
    FETCHCONTENT_MAKEAVAILABLE(MyCMake)
    MESSAGE(STATUS "MyCMake ${MyCMake_VERSION} built")
ENDIF ()

INIT_PROJECT()

ADD_SUB_DIRS_REC(include)
ADD_SUB_DIRS_REC(src)

EXPORT_TARGETS(DIRECTORIES "include")